fix: update default database username to nikolr4t_portfol
Updated workflow to use correct database username by default:
- Changed from 'nikolr4t' to 'nikolr4t_portfol'
- This matches the actual database username on Beget
- Fixes 'Access denied' error for database connection

The username can still be overridden via FTP_DB_USERNAME secret if needed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,8 +92,8 @@ jobs:
           
           # Если секреты не заданы, используем значения по умолчанию
           if [ -z "$DB_USERNAME" ]; then
-            DB_USERNAME="nikolr4t"
-            echo "⚠️ Using default username: nikolr4t"
+            DB_USERNAME="nikolr4t_portfol"
+            echo "⚠️ Using default username: nikolr4t_portfol"
             echo "💡 Tip: Set FTP_DB_USERNAME secret if username differs"
           fi
           
