--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,8 @@ jobs:
           cp -r api/*.php dist/api/ || true
           # Удаляем config.php из dist, он будет создан из секретов
           rm -f dist/api/config.php || true
+          # Копируем check-permissions.php для проверки прав доступа
+          # (можно удалить после проверки)
           
           # Копируем database файлы (без config.php)
           echo "📁 Copying database files..."
