feat: add initial projects seeding
Added scripts to populate database with initial projects:
- database/seed-projects.sql - SQL script for manual execution
- api/admin/seed-projects.php - PHP script for web execution

Projects added:
1. Точка GG - WordPress site (kungur-tochkagg.ru)
2. Приз Бокс - Telegram bot (t.me/wheel_prize_test_bot)
3. Welcome to Day - Invitations catalog (welcome-to-day.ru)

All projects use placeholder images initially.
Can be executed via:
- SQL: Run database/seed-projects.sql in database
- Web: Open https://develonik.ru/api/admin/seed-projects.php

Note: seed-projects.php should be removed after use for security

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,7 @@ jobs:
           mkdir -p dist/database
           cp database/schema.sql dist/database/ || true
           cp database/install.sql dist/database/ || true
+          cp database/seed-projects.sql dist/database/ || true
           cp database/.gitignore dist/database/ || true
           cp database/README.md dist/database/ || true
           # config.php будет создан из секретов
