--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,17 @@ jobs:
           cp -r api/*.php dist/api/ || true
           # Удаляем config.php из dist, он будет создан из секретов
           rm -f dist/api/config.php || true
+          
+          # Копируем admin API файлы
+          echo "📄 Copying admin API files..."
+          mkdir -p dist/api/admin
+          if [ -d "api/admin" ] && [ "$(ls -A api/admin 2>/dev/null)" ]; then
+            cp -r api/admin/*.php dist/api/admin/ || true
+            echo "✅ Admin API files copied"
+          else
+            echo "⚠️ No admin API files found"
+          fi
+          
           # Копируем check-permissions.php для проверки прав доступа
           # (можно удалить после проверки)
           
